ends of curves - 2D differs to 3D #36467

Closed
opened 2013-08-14 14:03:34 +02:00 by Alexander N. · 3 comments
Member

Relates to: #36461 #36420 #36007

%%%--- Operating System, Graphics card ---
Windows 7 64bit,

- Blender version with error, and version that worked ---

svn rev59114, with issue

- Short description of error ---

if the curve is switched from 3D to 2D, you can see that the alignment of the caps are not the same.
(the 3D curve is in the same even z-level as the 2D version is)

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

open attached blend file,
change/toggle curve from 2D to 3D,
and back to 2D

you will see, that the curve ends will wobble (be different from 3D to 2D)

changing the resolution will affect the strength of that effect.

(looks like only the 3D code-path take effect of the new curve implementation.
the 2D code-path is following the old implementation.)%%%

**Relates to**: #36461 #36420 #36007 %%%--- Operating System, Graphics card --- Windows 7 64bit, - Blender version with error, and version that worked --- svn rev59114, with issue - Short description of error --- if the curve is switched from 3D to 2D, you can see that the alignment of the caps are not the same. (the 3D curve is in the same even z-level as the 2D version is) - Steps for others to reproduce the error (preferably based on attached .blend file) --- open attached blend file, change/toggle curve from 2D to 3D, and back to 2D you will see, that the curve ends will wobble (be different from 3D to 2D) changing the resolution will affect the strength of that effect. (looks like only the 3D code-path take effect of the new curve implementation. the 2D code-path is following the old implementation.)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Eh, forgot 2D and 3D splines are handled differently :S

I believe the issue is now fixed in svn rev59141. Please double-check it and let me know whether there're more issues. More intense test is also welcome :)

For now marking report as fixed.%%%

%%%Eh, forgot 2D and 3D splines are handled differently :S I believe the issue is now fixed in svn rev59141. Please double-check it and let me know whether there're more issues. More intense test is also welcome :) For now marking report as fixed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36467
No description provided.